--- a/.devcontainer/docker-compose.override.yml.example
+++ b/.devcontainer/docker-compose.override.yml.example
@@ -3,7 +3,7 @@
 # The docker-compose.override.yml file is ignored by git
 
 services:
-  ai-pipeline:
+  ai-simple-research-pipeline:
     # Example: Mount local configuration files
     volumes:
        - ${HOME}/.claude:/home/vscode/.claude
