Implement AI-powered due diligence pipeline for startup analysis
- Add 4-stage pipeline: Summary, Standardization, Review, Report generation
- Implement document types for flow data persistence across stages
- Create structured output with 5 risks, 5 opportunities, 5 questions
- Add comprehensive prompt templates for each analysis stage
- Configure Google Gemini models as defaults
- Fix document naming to remove path separators (framework constraint)
- Add deploy.py for Prefect deployment (work in progress)
- Include sample project analysis with successful pipeline execution
- Update README with project description and usage instructions

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
     "name": "ai-simple-research-pipeline development",
-    "dockerComposeFile": "docker-compose.yml",
+    "dockerComposeFile": ["docker-compose.yml", "docker-compose.override.yml"],
     "remoteUser": "vscode",
     "service": "ai-simple-research-pipeline",
     "workspaceFolder": "/workspaces/ai-simple-research-pipeline",
