Add Docker Compose deployment and improve documentation
- Add Docker Compose configuration for production deployment
- Support Google Cloud Storage as document storage backend
- Add CLI entry point (cli.py) separate from Prefect deployment
- Add research_pipeline.py for main pipeline orchestration
- Update README with Docker deployment instructions
- Update all documentation with current project structure
- Fix import shadowing issue in research_pipeline.py
- Add .gitignore entries for key.json and plan.md

--- a/.gitignore
+++ b/.gitignore
@@ -165,3 +165,6 @@ output/
 
 # DevContainer local overrides
 .devcontainer/docker-compose.override.yml
+
+# Docker Compose overrides
+docker-compose.override.yml
