Add FastAPI server and webhook support for pipeline orchestration
- Add REST API server with FastAPI for triggering pipeline runs
- Implement webhook support for status updates and report delivery
- Add support for GCS signed URLs for input/output documents
- Enhance Docker Compose setup with Prefect middleware service
- Add comprehensive API documentation and end-to-end test script
- Update research pipeline with automatic GCS bucket creation
- Add HTTP test server for local development and testing

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,5 @@ PREFECT_API_KEY=
 # Storage Configuration (optional)
 # Path to GCS service account JSON file for authentication
 GCS_SERVICE_ACCOUNT_FILE=
+
+PREFECT_MIDDLEWARE_API_KEY=1234
