--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ classifiers = [
 dependencies = [
     "ai-pipeline-core>=0.2.0",
     "pydantic>=2.11.7",
+    "fastapi>=0.116.0",
 ]
 
 [project.scripts]
